syntax = "proto3";
package stafihub.stafihub.rvalidator;

// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/stafihub/stafihub/x/rvalidator/types";

// GenesisState defines the rvalidator module's genesis state.
message GenesisState {
    // this line is used by starport scaffolding # genesis/proto/state
}
